 * Asia/Aden
 * Asia/Kuwait
 * Asia/Phnom_Penh
 * Asia/Vientiane
 * Asia/Muscat
 * Antarctica/McMurdo
 * Europe/Jersey
 * Europe/Guernsey
 * Europe/Isle_of_Man
 * Europe/Mariehamn
 * Europe/Busingen
 * Europe/Vatican
 * Europe/San_Marino
 * Europe/Vaduz
 * Arctic/Longyearbyen
 * Europe/Ljubljana
 * Europe/Podgorica
 * Europe/Sarajevo
 * Europe/Skopje
 * Europe/Zagreb
 * Europe/Bratislava
 * Asia/Istanbul
 * Pacific/Johnston
 * America/Aruba
 * America/Lower_Princes
 * America/Kralendijk
 * America/Anguilla
 * America/Dominica
 * America/Grenada
 * America/Guadeloupe
 * America/Marigot
 * America/Montserrat
 * America/St_Barthelemy
 * America/St_Kitts
 * America/St_Lucia
 * America/St_Thomas
 * America/St_Vincent
 * America/Tortola

The change made should mean that further damage by the IANA time-zone database maintainer
will be less noticeable.

Semantic compatible - Yes


Deprecations since 2.7
----------------------


Bug fixes since 2.7
-------------------
- Fix MonthDay.plusDays() [#227]
  The algorithm was incorrect when adding enough days to cause the month to change twice.

- Fix DateTime.withDate() DateTime.withTime() [#233]
  The algorithm incorrectly changed the hour of day when certain DST dates were hit.
  The new algorithm avoids an IllegalInstantException when moving to a DST gap.

- Fix Period.parse() [#238]
  Negative periods of a fraction of a second were not parsed correctly.

- Format Etc/GMT time-zone using GMT data [#244]
  This change will provide better text formats for pattern letter 'z'.


Scala
--------
Joda-Time uses annotations from Joda-Convert.
In the Java programming language, this dependency is optional, however in Scala it is not.
Scala users must manually add the Joda-Convert v1.2 dependency.


Feedback
--------
Feedback is best received using GitHub issues and Pull Requests.
https://github.com/JodaOrg/joda-time/

Feedback is also welcomed via the joda-interest mailing list.

The Joda team
http://www.joda.org/joda-time/